--- a/app/code/Krga/CustomerNotes/view/frontend/templates/index.phtml
+++ b/app/code/Krga/CustomerNotes/view/frontend/templates/index.phtml
@@ -5,11 +5,14 @@ $customer_notes = $block->getNotes();
 $customer_notes_collection = $block->getNotesCollection();
 $customer_notes_page_size = $block->getPageSize();
 $customers = $block->getCustomers();
+$showTagsOnList = $block->getShowTagsOnList();
+$showPaginationOnList = $block->getShowPaginationOnList();
+$showAddNoteFormOnList = $block->getShowAddNoteFormOnList();
 $tags = $block->getTags();
 
 if( is_array( $customer_notes ) && count( $customer_notes ) > 0 ) {
     foreach( $customer_notes as $customer_note ) {
-        $noteTagsHtml = $customer_note->getNoteTagsHtml();
+        $noteTagsHtml = $showTagsOnList ? $customer_note->getNoteTagsHtml() : '';
         $customer = $customer_note->getNoteCustomer($customer_note->getCustomerId());
         ?>
         <div>
@@ -36,39 +39,40 @@ if( is_array( $customer_notes ) && count( $customer_notes ) > 0 ) {
 
 <p><a href="<?php echo $block->getUrl('notes/index/trashed'); ?>">View trashed notes</a></p>
 
-<?php
-// Create and configure the pager block
-$pagerBlock = $block->getLayout()->createBlock(\Magento\Theme\Block\Html\Pager::class, 'customer_notes_pager');
-$pagerBlock->setAvailableLimit([$customer_notes_page_size => $customer_notes_page_size]);
-$pagerBlock->setShowPerPage(true);
-$pagerBlock->setCollection($customer_notes_collection);
-echo $pagerBlock->toHtml();
-?>
+<?php if ($showPaginationOnList) {
+    $pagerBlock = $block->getLayout()->createBlock(\Magento\Theme\Block\Html\Pager::class, 'customer_notes_pager');
+    $pagerBlock->setAvailableLimit([$customer_notes_page_size => $customer_notes_page_size]);
+    $pagerBlock->setShowPerPage(true);
+    $pagerBlock->setCollection($customer_notes_collection);
+    echo $pagerBlock->toHtml();
+} ?>
 
-<h2>Add Customer Note:</h2>
-<form id="add-note-form" action="<?php echo $block->getUrl('notes/index/add'); ?>" method="post">
-    <label for="note">Note:</label>
-    <textarea id="note" name="note" required></textarea>
-    <br/>
-    <?php if(is_array($customers) && count($customers) > 0) { ?>
-        <label for="customer">Customer:</label>
-        <select id="customer" name="customer" required>
-            <option>Choose Customer</option>
-            <?php foreach($customers as $customer) { ?>
-                <option value="<?php echo $customer['entity_id']; ?>"><?php echo $customer['firstname'] . ' ' . $customer['lastname']; ?></option>
-            <?php } ?>
-        </select>
-    <?php } ?>
-    <br/>
-    <?php if(is_array($tags) && count($tags) > 0) { ?>
-        <label for="tags">Tags:</label>
-        <select id="tags" name="tags[]" required multiple>
-            <?php foreach($tags as $tag) { ?>
-                <option value="<?php echo $tag->getTagId(); ?>"><?php echo $tag->getName(); ?></option>
-            <?php } ?>
-        </select>
-    <?php } ?>
-    <br/>
-    <br/>
-    <button class="action primary" type="submit">Add Note</button>
-</form>
+<?php if ($showAddNoteFormOnList) { ?>
+    <h2>Add Customer Note:</h2>
+    <form id="add-note-form" action="<?php echo $block->getUrl('notes/index/add'); ?>" method="post">
+        <label for="note">Note:</label>
+        <textarea id="note" name="note" required></textarea>
+        <br/>
+        <?php if(is_array($customers) && count($customers) > 0) { ?>
+            <label for="customer">Customer:</label>
+            <select id="customer" name="customer" required>
+                <option>Choose Customer</option>
+                <?php foreach($customers as $customer) { ?>
+                    <option value="<?php echo $customer['entity_id']; ?>"><?php echo $customer['firstname'] . ' ' . $customer['lastname']; ?></option>
+                <?php } ?>
+            </select>
+        <?php } ?>
+        <br/>
+        <?php if(is_array($tags) && count($tags) > 0) { ?>
+            <label for="tags">Tags:</label>
+            <select id="tags" name="tags[]" required multiple>
+                <?php foreach($tags as $tag) { ?>
+                    <option value="<?php echo $tag->getTagId(); ?>"><?php echo $tag->getName(); ?></option>
+                <?php } ?>
+            </select>
+        <?php } ?>
+        <br/>
+        <br/>
+        <button class="action primary" type="submit">Add Note</button>
+    </form>
+<?php } ?>
