Added Global Settings

--- a/app/code/Krga/CustomerNotes/view/frontend/templates/view_tag.phtml
+++ b/app/code/Krga/CustomerNotes/view/frontend/templates/view_tag.phtml
@@ -35,4 +35,5 @@ if ($tagName) { ?>
     <?php }
 } else { ?>
     <p>The tag you have selected does not exist!</p>
-<?php }
+<?php } ?>
+<p><a href="<?php echo $block->getUrl('notes'); ?>">Back to Notes</a></p>
