--- a/app/code/Krga/CustomerNotes/view/frontend/templates/index.phtml
+++ b/app/code/Krga/CustomerNotes/view/frontend/templates/index.phtml
@@ -67,7 +67,7 @@ if( is_array( $customer_notes ) && count( $customer_notes ) > 0 ) { ?>
         <br/>
         <?php if(is_array($tags) && count($tags) > 0) { ?>
             <label for="tags">Tags:</label>
-            <select id="tags" name="tags[]" required multiple>
+            <select id="tags" name="tags[]" multiple>
                 <?php foreach($tags as $tag) { ?>
                     <option value="<?php echo $tag->getTagId(); ?>"><?php echo $tag->getName(); ?></option>
                 <?php } ?>
