--- a/app/code/Krga/CustomerNotes/view/frontend/web/css/global-styles.css
+++ b/app/code/Krga/CustomerNotes/view/frontend/web/css/global-styles.css
@@ -1,3 +1,15 @@
+.notes-list-filter-holder {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    margin: 0 0 20px;
+}
+
+.notes-list-filter-holder .filter-item.active {
+    text-decoration: underline;
+}
+
 .notes-holder {
     display: flex;
     flex-direction: column;
